--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
             <nav >
                 <img class="logo" src="./Project Images/logo2_updated.png" alt="Nirmith's logo"/>
                 <ul id="nav-list">
-                    <li><a href="#about-me" class="nav_tag">About me</a></li>
-                    <li><a href="#projects" class="nav_tag">Projects</a></li>
-                    <li><a href="#testimonials" class="nav_tag">Testimonials</a></li>
+                    <li><a href="#about-me" class="nav_tag" style="margin-right: 27px;">About me</a></li>
+                    <li><a href="#projects" class="nav_tag" style="margin-right: 27px;">Projects</a></li>
+                    <li><a href="#certs" class="nav_tag" style="margin-right: 27px;">Certifications</a></li>
+                    <li><a href="#testimonials" class="nav_tag" style="margin-right: 27px;">Testimonials</a></li>
                 </ul>
                 <button class="hamburger" id="hamburger">
                     <i class="fas fa-bars"></i>
@@ -56,7 +57,7 @@
           </div>
       </section>
       <section class="sub-section-alternative" id="projects" style="background-color: rgba(28, 29, 37,0.6);color: white;">
-          <h2>Projects And Certifications</h2>
+          <h2>Projects</h2>
           <div class="project-container" >
                 <div class="project-card">
                     <img class="project-image" src="./Project Images/MovieLocator.png" alt="Project One Image"/>
@@ -79,28 +80,52 @@
                     <p class="subtext"><a class="project-link"  target="_blank"href="https://github.com/NirmithVictor/StoreLocator">Click here</a></p>
                 </div>
                 <div class="project-card">
-                    <img class="project-image" src="./Project Images/Certificate1.png" alt="Responsive web design Cert"/>
-                    <h3>Responsive Web Design Certification</h3>
+                    <img class="project-image" src="./Project Images/Parallax.png" alt="Project One Image"/>
+                    <h3>Parallax Website</h3>
                     <br>
-                    <p class="subtext">This is one of my first Certification.  This portfolio project is the result of this certification that I had recieved.</p>
-                    <br>
-                    <hr/>
-                    <br>
-                    <p class="subtext"><a class="project-link" target="_blank" href="https://www.freecodecamp.org/certification/fcc520bbe1d-8ce5-4007-b31d-3fe885a52e10/responsive-web-design">Click here</a></p>
-                </div>
-                <div class="project-card">
-                    <img class="project-image" src="./Project Images/Certificate2.png" alt="Responsive web design Cert"/>
-                    <h3>Fundamentals of UX/UI design</h3>
-                    <br>
-                    <p class="subtext">This although a beginner certification is one of my milestone certification.  This has taught me alot more than I had learnt in the 2 years I have been at university.</p>
+                    <p class="subtext" >In this project I learnt the effects of how parallax works and how to incorporate them into a site to make it look more attractive and eye-catching to the user.  Please refer below link to view the launched website.</p>
                     <br>
                     <hr/>
                     <br>
-                    <p class="subtext"><a class="project-link" target="_blank" href="https://www.coursera.org/account/accomplishments/certificate/8XXXMS7TJUSH">Click here</a></p>
+                    <p class="subtext"><a class="project-link"  target="_blank" href="https://heuristic-darwin-f9e201.netlify.app/">Click here</a></p>
                 </div>
           </div>
       </section>
-      
+      <section class="sub-section-alternative" id="certs" style="background-color: rgba(28, 29, 37,0.6);color: white;">
+        <h2>Certifications</h2>
+        <div class="project-container" >
+              <div class="project-card">
+                  <img class="project-image" src="./Project Images/Certificate1.png" alt="Responsive web design Cert"/>
+                  <h3>Responsive Web Design Certification</h3>
+                  <br>
+                  <p class="subtext">This is one of my first Certification.  This portfolio project is the result of this certification that I had recieved.</p>
+                  <br>
+                  <hr/>
+                  <br>
+                  <p class="subtext"><a class="project-link" target="_blank" href="https://www.freecodecamp.org/certification/fcc520bbe1d-8ce5-4007-b31d-3fe885a52e10/responsive-web-design">Click here</a></p>
+              </div>
+              <div class="project-card">
+                  <img class="project-image" src="./Project Images/Certificate2.png" alt="Responsive web design Cert"/>
+                  <h3>Fundamentals of UX/UI design</h3>
+                  <br>
+                  <p class="subtext">This although a beginner certification is one of my milestone certification.  This has taught me alot more than I had learnt in the 2 years I have been at university.</p>
+                  <br>
+                  <hr/>
+                  <br>
+                  <p class="subtext"><a class="project-link" target="_blank" href="https://www.coursera.org/account/accomplishments/certificate/8XXXMS7TJUSH">Click here</a></p>
+              </div>
+              <div class="project-card">
+                <img class="project-image" src="./Project Images/Certificate3.png" alt="Responsive web design Cert"/>
+                <h3>JavaScript Algorithms and Data Structures</h3>
+                <br>
+                <p class="subtext">This started of as a very basic intro course but the datastructures and algorithms that followed were although a bit challenging were much easier to complete once I gained the amount of confidence needed to complete this certification.</p>
+                <br>
+                <hr/>
+                <br>
+                <p class="subtext"><a class="project-link" target="_blank" href="https://freecodecamp.org/certification/fcc520bbe1d-8ce5-4007-b31d-3fe885a52e10/javascript-algorithms-and-data-structures">Click here</a></p>
+            </div>
+        </div>
+    </section>
 
       <section class="sub-section-alternative" id="testimonials" style="background-color: rgba(28, 29, 37,0.6);color: white;">
         <h2>Testimonials</h2>
