--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
     <section id="mysection">
         <div class="hero-title">
-            <h1 style="text-align: center;"> Hi,This Nirmith Victor D'Almeida aka JayCodes ✨<span>Programmer</span>✨</h1>
+            <h1 style="text-align: center;"> Hi,This is Nirmith Victor D'Almeida aka JayCodes ✨<span>Programmer</span>✨</h1>
             <p style="padding-top: 10px;">Adaptable, Problem Solver, Competitive Programmer, Team Player and Quick Learner.</p>
         </div>
         <div class="btns">
