--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Nirmith Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./project_images/Logo.png" type="image/x-icon">
-    <script src="https://kit.fontawesome.com/761e4c8e5c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <script src="https://use.fontawesome.com/f39a2841b0.js"></script>
 </head>
 <body>
     <section class="menu" style="height:10vh;width: 100%;">
@@ -149,8 +150,8 @@
         <section class="Testimonials" id="testimonials">
             <div class="container" >
                 <div class="row">
-                    <div class="section-title text-center" >
-                        <h1>Testimonials</h1>
+                    <div class="section-title text-center">
+                        <h1 style="word-wrap: break-all;">Testimonials</h1>
                     </div>
                 </div>
                 <div class="row">
@@ -215,7 +216,7 @@
         <div class="container">
             <div class="row">
                 <div class="section-title text-center">
-                    <h1>Contact Us</h1>
+                    <h1>Contact US</h1>
                     <p style="padding: 20px;"><i>Want to collaborate? Get in touch? Build something? Need a Coding Buddy? Or just a buddy?</i></p>
                     <div style="width: 100%;display: flex;justify-content: center;">
                         <a href="mailto:nirmithdalmeida@hotmail.com">
@@ -229,7 +230,7 @@
                 <div style="width: 100%;display: flex;justify-content: center;">
                     <div style="display: flex;font-size: 40px; padding-top: 5px;">
                         <div style="padding-right: 20px;"><a href="https://www.linkedin.com/in/nirmith-dalmeida-81ab2418a" target="_blank" class="social1">
-                          <i class="fab fa-linkedin" style="color: white;"></i>
+                            <i class="fab fa-linkedin" style="color: white;"></i>
                         </a></div>
                         <div style="padding-right: 20px;">
                             <a href="https://www.instagram.com/_jay_codes_" target="_blank" class="social1">
@@ -261,5 +262,6 @@
         <p>&#169; 2021 Nirmith Victor D'Almeida</p>
     </footer>
 </body>
+<script src="https://kit.fontawesome.com/9269d17a31.js" crossorigin="anonymous"></script>
 <script src="script.js"></script>
 </html>
